# Homework_29_PD12

./: README.md  manage.py  pyproject.toml
Homework_29_PD12/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
raw_data/: import_data.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
